--- a/assets/styles/scss/components/_solution.scss
+++ b/assets/styles/scss/components/_solution.scss
@@ -44,6 +44,7 @@
 
   &-back-office {
     background-color: $color-light_20;
+    // background-image: url("/assets/svg/background-dot.svg");
 
     &__container {
       @include isMediaTabletLandscape {
