--- a/assets/styles/scss/trumps/_box-shadow.scss
+++ b/assets/styles/scss/trumps/_box-shadow.scss
@@ -1,9 +1,9 @@
 @use "../settings/elevations" as *;
 
 .box-shadow {
-  // &--outline {
-  //   box-shadow: $elevation-outline;
-  // }
+  &--bottom {
+    box-shadow: 0px 3px 6px #00000029;
+  }
 
   // &--xsmall {
   //   box-shadow: $elevation-xsmall;
