--- a/assets/styles/scss/settings/_spacings.scss
+++ b/assets/styles/scss/settings/_spacings.scss
@@ -6,6 +6,7 @@ $spacing-08: 0.5rem; //8px
 $spacing-09: 0.563rem; //8px
 $spacing-10: 0.625rem; //10px
 $spacing-12: 0.75rem; //12px
+$spacing-14: 0.875rem; //14px
 $spacing-16: 1rem; //16px
 $spacing-18: 1.125rem; //18px
 $spacing-20: 1.25rem; //20px
