--- a/assets/styles/scss/tools/_gutters.scss
+++ b/assets/styles/scss/tools/_gutters.scss
@@ -12,6 +12,7 @@ $gutters: (
   ("09", $spacing-09),
   ("10", $spacing-10),
   ("12", $spacing-12),
+  ("14", $spacing-14),
   ("16", $spacing-16),
   ("18", $spacing-18),
   ("20", $spacing-20),
