--- a/assets/styles/scss/components/_header.scss
+++ b/assets/styles/scss/components/_header.scss
@@ -1,11 +1,15 @@
 @use "../common" as *;
 
 .header {
-  padding: $spacing-16 $spacing-40;
+  padding: $spacing-16 $spacing-30;
   background-color: $color-white;
   position: sticky;
   top: 0;
   z-index: 99;
+
+  @include isMediaTabletLandscape {
+    padding: $spacing-16 $spacing-40;
+  }
 
   &--brand {
     font-family: $font-family-openSans;
@@ -16,6 +20,11 @@
   &--navbar {
     margin-left: $spacing-34;
     flex-grow: 1;
+    display: none;
+
+    @include isMediaTabletLandscape {
+      display: block;
+    }
 
     ul {
       margin: 0;
@@ -23,7 +32,7 @@
     }
 
     li {
-      margin: 0 $spacing-10;
+      margin: 0 $spacing-18;
 
       a {
         font-size: $font-size-14;
@@ -33,7 +42,8 @@
         text-transform: uppercase;
         border-bottom: 1px solid transparent;
 
-        &:hover {
+        &:hover,
+        &.active {
           border-bottom: 1px solid $color-primary;
         }
       }
@@ -42,14 +52,231 @@
 
   &--right-content {
     margin-left: auto;
+    display: none;
+
+    @include isMediaTabletLandscape {
+      display: flex;
+    }
+
+    .button {
+      &--login {
+        border: 1px solid $color-primary;
+      }
+
+      &--language {
+        &.active {
+          background-color: $color-light_20;
+        }
+      }
+    }
 
     button {
       padding: $spacing-08 $spacing-40;
-      border: 1px solid $color-primary;
       border-radius: $spacing-24;
 
       &:hover {
         background-color: $color-light-20;
+      }
+    }
+  }
+
+  &--button-language-content {
+    position: relative;
+
+    button {
+      width: 100%;
+      padding: $spacing-08 $spacing-30;
+
+      &:hover {
+        background-color: transparent;
+
+        @include isMediaTabletLandscape {
+          background-color: $color-light-20;
+        }
+      }
+
+      @include isMediaTabletLandscape {
+        span.hide--lg {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &--dropdown {
+    border-bottom: 1px solid #c8c9cb;
+    padding: $spacing-04 $spacing-30 $spacing-16 $spacing-60;
+    margin: 0;
+
+    li {
+      padding: $spacing-10 $spacing-18 $spacing-10 $spacing-30;
+      position: relative;
+      display: flex;
+      align-items: center;
+
+      label {
+        padding-left: $spacing-10;
+
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          border-radius: 50%;
+        }
+
+        &::before {
+          left: 0;
+          width: $spacing-22;
+          height: $spacing-22;
+          border: 2px solid $color-primary;
+        }
+      }
+
+      input {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        cursor: pointer;
+
+        &:checked ~ label {
+          &::after {
+            left: 5px;
+            width: $spacing-12;
+            height: $spacing-12;
+            background-color: $color-primary;
+          }
+        }
+      }
+    }
+
+    @include isMediaTabletLandscape {
+      display: none;
+      position: absolute;
+      box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.3);
+      background-color: $color-white;
+      width: 100%;
+      top: calc(100% + 10px);
+      border-radius: 0 0 4px 4px;
+      padding: $spacing-10 0;
+
+      &.open {
+        display: block;
+      }
+
+      li {
+        padding: $spacing-10 $spacing-18;
+
+        &:hover {
+          background-color: $color-light_20;
+        }
+
+        label {
+          padding-left: 0;
+
+          &::before,
+          &::after {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  &--menu {
+    width: $spacing-40;
+    height: $spacing-40;
+
+    &-close {
+      display: none;
+    }
+
+    @include isMediaTabletLandscape {
+      display: none;
+    }
+  }
+
+  &--active {
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+    padding: $spacing-16 0;
+    position: fixed;
+    top: 0px;
+    left: 0;
+    width: 100%;
+
+    & + .home-intro,
+    & + .solution-intro {
+      margin-top: $spacing-72;
+    }
+
+    > section {
+      flex-wrap: wrap;
+    }
+
+    .header {
+      &--brand {
+        padding-left: $spacing-30;
+      }
+
+      &--menu {
+        margin-right: $spacing-30;
+
+        &-close {
+          display: flex;
+        }
+
+        &-open {
+          display: none;
+        }
+      }
+
+      &--navbar {
+        display: block;
+        margin-left: 0;
+        width: 100%;
+
+        ul {
+          flex-direction: column;
+          margin-top: $spacing-16;
+        }
+
+        li {
+          margin: 0;
+          border-top: 1px solid #c8c9cb;
+
+          a {
+            padding: $spacing-16 $spacing-30;
+            width: 100%;
+
+            &:hover,
+            &.active {
+              border-color: transparent;
+            }
+          }
+        }
+      }
+
+      &--right-content {
+        display: block;
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border-top: 1px solid #c8c9cb;
+
+        .button {
+          &--login {
+            margin: $spacing-140 auto $spacing-60;
+          }
+
+          &-tertiary {
+            border-radius: 0;
+            padding: $spacing-16 $spacing-30;
+          }
+        }
       }
     }
   }
