--- a/assets/styles/scss/settings/_breakpoints.scss
+++ b/assets/styles/scss/settings/_breakpoints.scss
@@ -1,5 +1,6 @@
 /* Breakpoints */
-$breakpoint-super-mobile: 340px; // test for small mobiles
+$breakpoint-mobile-360: 365px;
+$breakpoint-super-mobile: 380px; // test for small mobiles
 $breakpoint-tablet: 600px;
 $breakpoint-tablet-landscape: 992px;
 $breakpoint-desktop: 1360px;
