--- a/assets/styles/scss/settings/_colors.scss
+++ b/assets/styles/scss/settings/_colors.scss
@@ -3,9 +3,12 @@ $color-background-green_30: rgba($color-background-green, 0.3);
 $color-background-orange: #e4a157;
 $color-background-orange_30: rgba($color-background-orange, 0.3);
 $color-white: #ffffff;
+$color-white_12: rgba($color-white, 0.12);
+$color-white_18: rgba($color-white, 0.18);
 $color-light: #c8c9cb;
 $color-light_20: rgba($color-light, 0.2);
 $color-medium: #949599;
+$color-medium_20: rgba($color-medium, 0.2);
 $color-medium_12: rgba($color-medium, 0.12);
 $color-primary: #231f20;
 $color-secondary-dark: #b7041b;
