--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -6,7 +6,7 @@
   padding: $spacing-30 $spacing-20;
 
   @include isMediaTablet {
-    padding: $spacing-40 $spacing-40 $spacing-20;
+    padding: $spacing-40 $spacing-40;
   }
 
   ul {
@@ -54,6 +54,12 @@
       font-size: $font-size-12;
       color: rgba($color-medium, 0.8);
       text-transform: uppercase;
+      transition: 100ms;
+
+      &:hover {
+        color: $color-white;
+        opacity: 0.7;
+      }
     }
   }
 
@@ -72,11 +78,28 @@
       margin: 0 10px;
       opacity: 0.8;
     }
+
+    a {
+      transition: scale 0.25s ease;
+
+      &:hover {
+        transform: scale(1.2);
+        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+      }
+    }
   }
 
   &--copyright {
     font-size: $font-size-12;
     color: rgba($color-medium, 0.8);
+    a {
+      text-decoration: underline;
+      transition: 100ms;
+    }
+    a:hover {
+      color: $color-white;
+      opacity: 0.7;
+    }
 
     @include isMediaTabletLandscape {
       justify-content: flex-end;
