--- a/assets/styles/scss/components/_home.scss
+++ b/assets/styles/scss/components/_home.scss
@@ -2,12 +2,46 @@
 
 .home {
   &-intro {
-    height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     display: flex;
     text-align: center;
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    margin-top: -73px;
+
+    @include isMediaTablet {
+      height: 100vh;
+      margin-top: -76px;
+    }
+
+    #home-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: left;
+      overflow: hidden;
+      z-index: -1;
+
+      @include isMediaTablet {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+      }
+    }
+    &__content {
+      z-index: 2;
+    }
   }
 
   &-news {
@@ -40,6 +74,7 @@
 
       img {
         width: 100%;
+        max-width: 370px;
 
         @include isMediaTabletLandscape {
           width: fit-content;
@@ -82,6 +117,7 @@
       }
 
       img {
+        max-width: 651px;
         width: calc(100% - $spacing-30);
         height: auto;
       }
@@ -139,5 +175,37 @@
         }
       }
     }
+  }
+}
+.animated-box {
+}
+
+.fade-in {
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
   }
 }
