--- a/assets/styles/scss/components/_solution.scss
+++ b/assets/styles/scss/components/_solution.scss
@@ -4,6 +4,11 @@
   &-intro {
     overflow-x: hidden;
 
+    .counter {
+      animation-duration: 1s;
+      animation-delay: 0s;
+    }
+
     &--image {
       position: relative;
       min-height: 350px;
@@ -50,23 +55,30 @@
       bottom: 45vh;
       left: 0;
       width: 50vw;
+      max-width: 100%;
       height: 600px;
 
+      @include isMobile360 {
+        bottom: 60vh;
+        height: 60vh;
+      }
+
       @include isSuperMobile {
-        bottom: 95vh;
-        height: 80vh;
+        bottom: 69vh;
+        height: 65vh;
       }
 
       @include isMediaTablet {
         bottom: 30vh;
         height: 105vh;
+        width: 30%;
       }
 
       @include isMediaTabletLandscape {
         bottom: 0;
         left: 0;
-        width: 33%;
-        height: 104vh;
+        width: 30%;
+        height: 99vh;
       }
 
       img {
@@ -90,6 +102,7 @@
       }
 
       &-image {
+        max-width: 370px;
         img {
           width: 100%;
         }
@@ -115,11 +128,12 @@
   }
 
   &-opinions {
-    background-color: $color-background-orange_30;
+    background-color: $color-medium_12;
     min-height: 400px;
   }
 
   &-brands {
+    display: none;
     &__image {
       @include isMediaTabletLandscape {
         justify-content: space-between;
@@ -147,6 +161,15 @@
 
     @include isMediaTabletLandscape {
       flex-direction: row;
+    }
+    &__container {
+      text-align: center;
+      img {
+        align-self: center;
+      }
+      p {
+        align-self: center;
+      }
     }
   }
 }
